--- a/en.html
+++ b/en.html
@@ -199,7 +199,7 @@
             max-height: 800px;
             opacity: 1;
             padding: 20px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .about-image {
             max-width: 300px;
@@ -727,7 +727,7 @@
         .service-item:nth-child(1).reveal { transition-delay: 0.2s; }
         .service-item:nth-child(2).reveal { transition-delay: 0.4s; }
         .service-item:nth-child(3).reveal { transition-delay: 0.6s; }
-        .service-item:nth-child(4).reveal { transition-delay: 0.5s; }
+        .service-item:nth-child(4).reveal { transition-delay: 0.8s; }
         .service-item.reveal.visible { opacity: 1; transform: translateX(0); }
         
         .language-dropdown {
@@ -808,7 +808,7 @@
         @media (max-width: 768px) {
             body {
                 font-size: 16px;
-                padding-top: 10px;
+                padding-top: 0;
             }
             .container {
                 padding: 0 15px;
@@ -821,7 +821,7 @@
                 justify-content: space-between;
                 align-items: center;
                 width: 100%;
-                padding: 10px 15px;
+                padding: 5px 15px;
                 box-sizing: border-box;
                 position: relative;
                 z-index: 10;
@@ -854,25 +854,25 @@
                 display: none;
             }
             .hero {
-                min-height: 60vh;
+                min-height: 50vh;
                 width: 100%;
                 padding: 0;
                 position: relative;
-                padding-top: 50px;
+                padding-top: 40px;
             }
             .hero-logo {
-                max-width: 250px;
-                max-height: 30vh;
-                margin: 6px auto;
+                max-width: 300px;
+                max-height: 35vh;
+                margin: 4px auto;
             }
             .hero p {
                 font-size: 1.1rem;
-                margin-bottom: 6px;
+                margin-bottom: 4px;
             }
             .cta-button {
                 padding: 15px 30px;
                 font-size: 1.1rem;
-                margin: 6px auto;
+                margin: 4px auto;
                 box-shadow: 0 2px 6px rgba(212, 175, 55, 0.2);
             }
             .cta-button:not(.disabled):hover {
@@ -890,11 +890,11 @@
             .about-content.active {
                 max-height: 1000px;
                 padding: 10px;
-                margin-bottom: 10px;
+                margin-bottom: 20px;
             }
             .style-craft-section {
-                margin-top: 0;
-                padding-top: 0;
+                margin-top: 20px;
+                padding-top: 20px;
             }
             .section-title {
                 font-size: 2.2rem;
@@ -929,15 +929,22 @@
                 margin-left: auto;
                 margin-right: auto;
             }
-            .service-item:nth-child(odd).reveal,
+            .service-item:nth-child(odd).reveal {
+                opacity: 0;
+                transform: translateX(-30px);
+            }
             .service-item:nth-child(even).reveal {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: translateX(30px);
             }
             .service-item.reveal.visible {
                 opacity: 1;
-                transform: translateY(0);
+                transform: translateX(0);
             }
+            .service-item:nth-child(1).reveal { transition-delay: 0.2s; }
+            .service-item:nth-child(2).reveal { transition-delay: 0.4s; }
+            .service-item:nth-child(3).reveal { transition-delay: 0.6s; }
+            .service-item:nth-child(4).reveal { transition-delay: 0.8s; }
             .service-icon {
                 width: 32px;
                 height: 32px;
