--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="https://www.hair-estetic.com/favicon-96x96.png" sizes="96x96" crossorigin="anonymous" />
     <link rel="icon" type="image/png" href="https://www.hair-estetic.com/favicon-16x16.png" sizes="16x16" crossorigin="anonymous" />
     <link rel="icon" type="image/svg+xml" href="https://www.hair-estetic.com/favicon.svg" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="https://www.hair-estetic.com/favicon.ico" crossorigin="anonymous" />
+    <link rel="icon" href="/path/to/favicon.ico">
     <link rel="apple-touch-icon" href="https://www.hair-estetic.com/apple-touch-icon.png" crossorigin="anonymous" />
     <link rel="manifest" href="https://www.hair-estetic.com/site.webmanifest" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1486,3 +1486,4 @@
     </script>
 </body>
 </html>
+
